[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scripts/PlayerCombat.gd" type="Script" id=3]
[ext_resource path="res://scripts/PlayerStateMachine.gd" type="Script" id=4]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="World" type="Node"]

[node name="Player" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="Player"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="Player/StateMachine"]

[node name="Label" type="Label" parent="Player/StateMachine/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.333
anchor_right = 0.5
anchor_bottom = 0.333
margin_left = -24.0
margin_top = -7.8
margin_right = 24.0
margin_bottom = 6.2
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timers" type="Node" parent="Player"]

[node name="AttackTimer" type="Timer" parent="Player/Timers"]
wait_time = 0.5
one_shot = true

[node name="HitTimer" type="Timer" parent="Player/Timers"]
wait_time = 0.1

[node name="Body" type="RigidBody2D" parent="Player"]
mode = 2
gravity_scale = 0.0
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Body"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player/Body"]
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player/Body"]
current = true
drag_margin_v_enabled = true
drag_margin_top = 1.0
drag_margin_bottom = 1.0

[node name="AttackArea" type="Area2D" parent="Player"]
script = ExtResource( 3 )

[node name="AttackShape" type="CollisionShape2D" parent="Player/AttackArea"]
position = Vector2( 64, -8 )
shape = SubResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
format = 1

[node name="enemy" type="RigidBody2D" parent="." groups=[
"enemy",
]]
position = Vector2( 150, -100 )
mode = 1
can_sleep = false
script = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="enemy"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy"]
shape = SubResource( 3 )
[connection signal="timeout" from="Player/Timers/AttackTimer" to="Player" method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="Player/Timers/HitTimer" to="Player" method="_on_HitTimer_timeout"]
